# Progetto_SCPA

./: .gitignore  CMakeLists.txt  matrix_structure_report.txt  server_specs.txt  to_do.txt
Cluster_CSR_OpenMP/: Cluster1_C1.txt  Cluster2_Regular_Sparse.txt  Cluster3_C3.txt  Cluster4_C4.txt  Cluster_Dense_Block_Structured.txt  Cluster_Irregular.txt  Cluster_Medium_Sparse_Regular.txt  Cluster_Ultra_Sparse_Regular.txt
OpenMP_src/include/: COOMatrix.h  CSRMatrix.h  HLLMatrix.h  file_utils.h  matrix_analysis.h  measure_performance.h  random_vec.h  read_mtx.h
OpenMP_src/src/: convert_coo_to_csr.c  convert_coo_to_ellp.c  convert_coo_to_ellp_columnwise.c  convert_mtx_to_COO.c  main.c  matrix_analysis.c  measure_performance.c  mmio.c  random_vec.c  read_mtx.c  store_performance.c
perf_csv/: mac_econ_fwd500_1th.csv
performance_csv/: cage4_performance.csv  nlpkkt80_performance.csv
scripts/: clean.sh  rebuild.sh  run_benchmark.sh
src/: convert_coo_to_csr.c  convert_mtx_to_COO.c  csr_product.c  file_utils.c  main.c  matrix_processing.c  measure_performance.c  random_vec.c  rcm_reordering.c  read_mtx.c  spmv_csr_serial.c  spmv_csr_static.c  store_performance.c
src/include/: COOMatrix.h  CSRMatrix.h  ELLPACKMatrix.h  RCM_Reorder.h  csr_product.h  file_utils.h  matrix_processing.h  measure_performance.h  mmio.h  spmv_kernels.h  store_performance.h
